--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,16 +11,14 @@
             name="userViewModel"
             type="com.learn.github.viewModel.UserViewModel" />
 
-        <variable
-            name="handler"
-            type="com.learn.github.HandlerClass" />
+
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".MainActivity">
+        tools:context=".view.MainActivity">
 
         <EditText
             android:layout_width="match_parent"
@@ -52,7 +50,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="@{()->userViewModel.onItemClick()}"
+                android:onClick="@{()->userViewModel.onItemLongClick()}"
 >
 
                 <androidx.appcompat.widget.AppCompatImageView
